--- a/The JBB/Base.lproj/Main.storyboard
+++ b/The JBB/Base.lproj/Main.storyboard
@@ -146,7 +146,7 @@
             <objects>
                 <viewController title="Team Detail View Controller" id="OEk-U0-avN" customClass="TeamDetailViewController" customModule="The_JBB" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8id-8k-wMF">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="8TA-Lc-QQp">
@@ -156,9 +156,10 @@
                                     <constraint firstAttribute="width" constant="150" id="lhx-aq-rsF"/>
                                 </constraints>
                             </imageView>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="1DF-aW-AN5">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="1DF-aW-AN5">
                                 <rect key="frame" x="10" y="250" width="394" height="558"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <color key="sectionIndexBackgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="playerCell" rowHeight="93" id="FyV-cS-M9p" customClass="PlayerTableViewCell" customModule="The_JBB" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="394" height="93"/>
@@ -168,7 +169,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nhe-27-FnG">
-                                                    <rect key="frame" x="5" y="37.5" width="37.5" height="18"/>
+                                                    <rect key="frame" x="5" y="19.5" width="37.5" height="18"/>
                                                     <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -191,7 +192,7 @@
                                                     </subviews>
                                                 </stackView>
                                                 <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="h9v-aj-9A0">
-                                                    <rect key="frame" x="204" y="37.5" width="180" height="18"/>
+                                                    <rect key="frame" x="204" y="19.5" width="180" height="18"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CCS-JF-BlX">
                                                             <rect key="frame" x="0.0" y="0.0" width="37.5" height="18"/>
@@ -224,12 +225,12 @@
                                                 <constraint firstAttribute="trailing" secondItem="h9v-aj-9A0" secondAttribute="trailing" constant="10" id="5uw-Lz-CY2"/>
                                                 <constraint firstItem="nhe-27-FnG" firstAttribute="leading" secondItem="nUP-Ky-ThB" secondAttribute="leading" constant="5" id="84B-5Y-DlI"/>
                                                 <constraint firstItem="ga0-Yz-APB" firstAttribute="centerY" secondItem="nUP-Ky-ThB" secondAttribute="centerY" id="BGt-sd-lpT"/>
-                                                <constraint firstItem="nhe-27-FnG" firstAttribute="centerY" secondItem="nUP-Ky-ThB" secondAttribute="centerY" id="X3S-sG-kXx"/>
+                                                <constraint firstItem="nhe-27-FnG" firstAttribute="centerY" secondItem="lCJ-2K-LX1" secondAttribute="centerY" id="FYP-qP-em7"/>
                                                 <constraint firstItem="ga0-Yz-APB" firstAttribute="top" secondItem="nUP-Ky-ThB" secondAttribute="top" constant="10" id="eG7-6t-PBv"/>
+                                                <constraint firstItem="h9v-aj-9A0" firstAttribute="centerY" secondItem="lCJ-2K-LX1" secondAttribute="centerY" id="gXf-gE-dRv"/>
                                                 <constraint firstAttribute="bottom" secondItem="ga0-Yz-APB" secondAttribute="bottom" constant="10" id="jGd-d2-RqW"/>
                                                 <constraint firstItem="h9v-aj-9A0" firstAttribute="leading" secondItem="ga0-Yz-APB" secondAttribute="trailing" constant="10" id="khN-fN-6VN"/>
                                                 <constraint firstItem="ga0-Yz-APB" firstAttribute="leading" secondItem="nhe-27-FnG" secondAttribute="trailing" constant="15" id="zFm-sf-ch5"/>
-                                                <constraint firstItem="h9v-aj-9A0" firstAttribute="centerY" secondItem="nUP-Ky-ThB" secondAttribute="centerY" id="zc8-in-Vmo"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
